--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding-bottom: 100px; /* Dostosuj wartość według potrzeb */
 }
 
 code {
@@ -19,12 +20,17 @@ code {
 }
 
 .site-footer {
-  position: fixed;
-  bottom: 0;
   width: 100%;
   margin-top: auto;
 }
 
 .pagination {
   margin-bottom: 70px;
+}
+
+.social-icons {
+  font-size: 70px;
+}
+.social-icons a {
+  margin-right: 100px;
 }
