features and changes
+ GallerySettings with add photos to Gallery
. modified buttons to icons

--- a/src/index.css
+++ b/src/index.css
@@ -104,3 +104,8 @@ code {
 .arrow-right {
   right: 160px;
 }
+.pagination .page-item.active .page-link {
+  background-color: black;
+  color: white;
+  border-color: black;
+}
