--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
+html,
 body {
+  height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  padding-bottom: 100px; /* Dostosuj wartość według potrzeb */
   background-color: #f5f5f5 !important;
 }
 
@@ -14,41 +15,25 @@ code {
     monospace;
 }
 
-.custom-navbar-ul {
+.App {
   display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  flex: 1;
+  padding-top: 56px; /* navbar height */
+}
+
+.navbar {
+  position: fixed !important;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000; /*over other elements */
+  background-color: #343a40;
   width: 100%;
-  gap: 50px;
-}
-
-.site-footer {
-  width: 100%;
-  margin-top: auto;
-}
-
-.pagination {
-  margin-bottom: 70px;
-}
-
-.social-icons {
-  font-size: 70px;
-}
-.social-icons a {
-  margin-right: 100px;
-}
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  padding-bottom: 100px;
-  background-color: #f5f5f5 !important;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
 
 .custom-navbar-ul {
@@ -57,34 +42,30 @@ code {
   gap: 50px;
 }
 
-.site-footer {
-  width: 100%;
+.footer {
   margin-top: auto;
+  width: 100%;
+  padding: 1rem 0;
+  background-color: #343a40;
+  color: white;
 }
 
 .pagination {
   margin-bottom: 70px;
 }
 
+.pagination .page-item.active .page-link {
+  background-color: black;
+  color: white;
+  border-color: black;
+}
+
 .social-icons {
   font-size: 70px;
 }
+
 .social-icons a {
   margin-right: 100px;
-}
-@media (max-width: 768px) {
-  .arrow-icon {
-    color: black;
-    font-size: 20px;
-    margin: 0 -80px;
-  }
-}
-
-@media (min-width: 769px) and (max-width: 1200px) {
-  .arrow-icon {
-    color: black;
-    font-size: 30px;
-  }
 }
 
 .arrow-left,
@@ -104,8 +85,18 @@ code {
 .arrow-right {
   right: 160px;
 }
-.pagination .page-item.active .page-link {
-  background-color: black;
-  color: white;
-  border-color: black;
+
+@media (max-width: 768px) {
+  .arrow-icon {
+    color: black;
+    font-size: 20px;
+    margin: 0 -80px;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1200px) {
+  .arrow-icon {
+    color: black;
+    font-size: 30px;
+  }
 }
